fixed the overflow of an image, and the rproject-top margin

--- a/js/assets/style.less
+++ b/js/assets/style.less
@@ -83,13 +83,14 @@ body{
 	left: 0;
 	max-width: 100%;
 	z-index: 1;
+	background-clip: 20px 20px; 
 
 }
 .carousel{
 	min-height: 250px;
 	min-width: 100px;
 	max-width: 100%;
-	width: 90vmin;
+	width: 80vmin;
 	height: 50vmin;
 
 }
